--- a/pkg/config/config-local.yaml
+++ b/pkg/config/config-local.yaml
@@ -28,10 +28,26 @@ JWTConfig:
   # SessionTime: 3600
   SecretKey: dummySecretKey
   RefreshTokenLifeMinute : 1440
-  AccesTokenLifeMinute : 1 
+  AccesTokenLifeMinute : 10
 
 # Admin account is created if its not exist,please update it with your own information before first start
 Admin:
-  # Username: admin
   Password: admin
   Email: admin@localhost.com
+
+# StoreData
+# Name string
+# Description string
+# Phone string
+# Email string
+# Address string
+
+StoreData:
+  Name: Mert's Store
+  Description: Mert's Store
+  Phone: +905555555555
+  Email: help@localhost.com
+  Address: Turkey
+
+
+
